[project]
name = "docs"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings-javascript>=0.2.0",
    "mkdocstrings[javascript,python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]
