[package]
name = "rocket-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
openlibx402-core = { path = "../../../packages/rust/openlibx402-core" }
openlibx402-rocket = { path = "../../../packages/rust/openlibx402-rocket" }
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
